NetBSD Problem Report #39911

From martti.kuparinen@piuha.net  Thu Nov 13 08:59:40 2008
Return-Path: <martti.kuparinen@piuha.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 4198E63B8A9
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 13 Nov 2008 08:59:40 +0000 (UTC)
Message-Id: <20081113085937.C3127198704@smtp.piuha.net>
Date: Thu, 13 Nov 2008 10:59:37 +0200 (EET)
From: martti.kuparinen@iki.fi
Reply-To: martti.kuparinen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: uhidev0: bad input length 8 != 0
X-Send-Pr-Version: 3.95

>Number:         39911
>Category:       kern
>Synopsis:       uhidev0: bad input length 8 != 0
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 13 09:00:00 +0000 2008
>Closed-Date:    Sat Jan 09 01:38:27 +0000 2010
>Last-Modified:  Sat Jan 09 01:40:05 +0000 2010
>Originator:     Martti Kuparinen
>Release:        NetBSD 4.0_STABLE
>Organization:
>Environment:
System: NetBSD p130 4.0_STABLE NetBSD 4.0_STABLE (P130) #0: Fri Oct 31 13:00:44 EET 2008 root@p130:/usr/src/sys/arch/amd64/compile/P130 amd64
Architecture: x86_64
Machine: amd64
>Description:

We have several Dell PowerEdge servers (R300, T300, 2900 and 2950) with
DRAC5 remote access cards. If I open the console (Windows Vista and
Internet Explorer) and type on the console I see

uhidev0: bad input length 8 != 0
uhidev0: bad input length 8 != 0

Every key press results two lines like that on the console which makes it
difficult to see any real information on the console. The workaround is to
switch to another VT and do the maintenance there if the host is running in
multi-user mode. However, if I need to boot to single-user mode without any
VTs, the maintenance becomes little challenging...

Apparently this happens also with SUN x4200 on the service processor console
so this is not Dell DRAC5 specific issue but something in our code.

This happens at least on NetBSD/amd64 4.x and 5.x.

>How-To-Repeat:
>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: PR/39911
Date: Sat, 26 Dec 2009 23:33:53 +0000

 Could you provide relevant autoconf(9)-time dmesg output for a
 kernel built with 'options UHIDEV_DEBUG' and the kernel global
 'uhidevdebug' set to 10?

From: Martti Kuparinen <martti.kuparinen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, 
 netbsd-bugs@NetBSD.org
Subject: Re: PR/39911
Date: Tue, 29 Dec 2009 08:29:02 +0200

 After pressing Enter once:


 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: status=0 cc=8
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: data = 00 00 28 00 00 00 00 00
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: rep=0, scd=0xffff8000924e2808 state=0x1
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: status=0 cc=0
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: data =
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: rep=0, scd=0xffff8000924e2808 state=0x1
 Dec 29 09:25:21 n223 /netbsd: uhidev0: bad input length 8 != 0
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: status=0 cc=8
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: data = 00 00 00 00 00 00 00 00
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: rep=0, scd=0xffff8000924e2808 state=0x1
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: status=0 cc=0
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: data =
 Dec 29 09:25:21 n223 /netbsd: uhidev_intr: rep=0, scd=0xffff8000924e2808 state=0x1
 Dec 29 09:25:21 n223 /netbsd: uhidev0: bad input length 8 != 0

From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: PR/39911
Date: Tue, 29 Dec 2009 14:40:02 +0000

 I'm sorry I wasn't more specific.  I'm actually looking more for
 what'would be in /var/run/dmesg.boot with those debug options set.

From: Martti Kuparinen <martti.kuparinen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, 
 netbsd-bugs@NetBSD.org
Subject: Re: PR/39911
Date: Wed, 30 Dec 2009 08:33:46 +0200

 http://kuparinen.org/martti/tmp/dmesg.boot

From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39911 CVS commit: src/sys/dev/usb
Date: Wed, 30 Dec 2009 23:42:22 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Wed Dec 30 23:42:22 UTC 2009

 Modified Files:
 	src/sys/dev/usb: uhidev.c

 Log Message:
 The Dell DRAC5 gives us a zero-length report immediately following
 a normal report.  Thus, ignore zero-length reports.  Move some related
 report size insanity checking into the UHIDEV_DEBUG case.

 Should fix PR/39911.


 To generate a diff of this commit:
 cvs rdiff -u -r1.45 -r1.46 src/sys/dev/usb/uhidev.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Martti Kuparinen <martti.kuparinen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, 
 netbsd-bugs@NetBSD.org
Subject: Re: PR/39911
Date: Thu, 31 Dec 2009 08:32:01 +0200

 I just tested version 1.46 and works now without any garbage so please close 
 this PR and send a pullup request for netbsd-5...

State-Changed-From-To: open->pending-pullups
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Thu, 31 Dec 2009 19:14:17 +0000
State-Changed-Why:
pullup-5 #1219


State-Changed-From-To: pending-pullups->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sat, 09 Jan 2010 01:38:27 +0000
State-Changed-Why:
Pulled up.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39911 CVS commit: [netbsd-5] src/sys/dev/usb
Date: Sat, 9 Jan 2010 01:37:04 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Jan  9 01:37:04 UTC 2010

 Modified Files:
 	src/sys/dev/usb [netbsd-5]: uhidev.c

 Log Message:
 Pull up following revision(s) (requested by jakllsch in ticket #1219):
 	sys/dev/usb/uhidev.c: revision 1.46
 The Dell DRAC5 gives us a zero-length report immediately following
 a normal report.  Thus, ignore zero-length reports.  Move some related
 report size insanity checking into the UHIDEV_DEBUG case.
 Should fix PR/39911.


 To generate a diff of this commit:
 cvs rdiff -u -r1.42.8.1 -r1.42.8.2 src/sys/dev/usb/uhidev.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.