The Dell DRAC5 gives us a zero-length report immediately following a normal report.  Thus, ignore zero-length reports.  Move some related report size insanity checking into the UHIDEV_DEBUG case.

Should fix PR/39911.